--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview --port 4173",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
+    "test": "vitest"
   },
   "dependencies": {
+    "@vue/test-utils": "^2.0.2",
     "vue": "^3.2.37"
   },
   "devDependencies": {
@@ -16,7 +18,9 @@
     "@vue/eslint-config-prettier": "^7.0.0",
     "eslint": "^8.21.0",
     "eslint-plugin-vue": "^9.3.0",
+    "happy-dom": "^6.0.4",
     "prettier": "^2.7.1",
-    "vite": "^3.0.4"
+    "vite": "^3.0.4",
+    "vitest": "^0.22.1"
   }
 }
